[gd_scene load_steps=2 format=3 uid="uid://c2w13g6qp7nis"]

[ext_resource type="Script" uid="uid://bd24rkipm3n6l" path="res://scripts/ui/equipment_slot.gd" id="1_lf8cf"]

[node name="EquipmentSlot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1088.0
offset_bottom = -584.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lf8cf")

[node name="ItemTexture" type="TextureRect" parent="."]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SlotNameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "EqSlot"
horizontal_alignment = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
